# HollowKnightRAG

./: .gitignore  README.md  main.py  persona.txt  pyproject.toml  requirements.txt
3d_models/: Head.3mf  Sword.STL
3d_models/sword/: Pure_Nail.stl  Pure_Nail_Back_FDM.stl  Pure_Nail_Front_FDM.stl
src/hollow_rag/: __init__.py  cli.py  logging_utils.py  paths.py  persona.py
src/hollow_rag/ingest/: rag_index.py  scrape_fandom.py
src/hollow_rag/servers/: rag_llamaindex.py  simple_ollama.py
