[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hollow-rag"
version = "0.1.0"
description = "Hollow Knight wiki -> markdown -> LlamaIndex+Ollama RAG + persona chat server"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]
